--- a/app.json
+++ b/app.json
@@ -24,6 +24,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "br.com.devdavi.howmuch"
     }
   }
 }
