--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "7.0.0-bridge.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
+    "react-native-navbar": "^2.1.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "babel-preset-expo": "^5.0.0"
   },
   "private": true
